--- a/index.html
+++ b/index.html
@@ -9,7 +9,50 @@
 </head>
 
 <body>
+  <header>
+    <nav>
+      <div class="head">
+        <h3>G3 Architect</h3>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="#">Home</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">About</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Blog</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="banner">
+      <div class="banner-content">
+        <h1 class="banner-title">
+          Brand New Group of Architects
+        </h1>
+        <p class="banner-description">
+          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even
+        </p>
+        <button class="btn-primary">
+          Explore More
+        </button>
+      </div>
+      <img src="images/banner.png" alt="">
+    </div>
+  </header>
 
+  <main>
+
+  </main>
+
+  <footer>
+
+  </footer>
 </body>
 
 </html>
