--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <!-- Header Section -->
   <header>
     <nav>
       <div class="head">
@@ -47,7 +48,24 @@
   </header>
 
   <main>
-
+    <!-- Features Section -->
+    <section class="teams-container">
+      <div class="teams-img-container">
+        <img src="images/team1.png" alt="">
+        <img src="images/team2.png" alt="">
+        <img src="images/team3.png" alt="">
+        <img src="images/team4.png" alt="">
+      </div>
+      <div class="teams-content">
+        <h3 class="teams-title"><span class="quick">Quick list</span> <span class="our">of Our</span> <span
+            class="feature">Features</span></h3>
+        <p class="teams-details">
+          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even
+        </p>
+        <button class="btn-primary">Explore More</button>
+      </div>
+    </section>c
   </main>
 
   <footer>
