--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 class="banner-title">
           Brand New Group of Architects
         </h1>
-        <p class="banner-description">
+        <p class="text-lightgrey">
           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
           some form, by injected humour, or randomised words which don't look even
         </p>
@@ -59,7 +59,7 @@
       <div class="teams-content">
         <h3 class="teams-title"><span class="quick">Quick list</span> <span class="our">of Our</span> <span
             class="feature">Features</span></h3>
-        <p class="teams-details">
+        <p class="text-lightgrey">
           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
           some form, by injected humour, or randomised words which don't look even
         </p>
