--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
 
   <main>
-    <!-- Features Section -->
+    <!-- Team Section -->
     <section class="teams-container">
       <div class="teams-img-container">
         <img src="images/team1.png" alt="">
@@ -65,7 +65,17 @@
         </p>
         <button class="btn-primary">Explore More</button>
       </div>
-    </section>c
+    </section>
+    <!--Features Section -->
+    <section class="feature">
+
+    </section>
+    <!-- Facts Section -->
+    <section class="facts">
+      <h3 class="head">Some Facts</h3>
+      <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, but the majority have
+        suffered alteration.</p>
+    </section>
   </main>
 
   <footer>
