--- a/index.html
+++ b/index.html
@@ -75,6 +75,28 @@
       <h3 class="head">Some Facts</h3>
       <p class="text-lightgrey">There are many variations of passages of Lorem Ipsum available, but the majority have
         suffered alteration.</p>
+      <div class="facts-card-container">
+        <div class="card">
+          <img src="images/icons/ribon.png" alt="">
+          <h3 class="card-stat">54</h3>
+          <p class="card-title">Awards Winnings</p>
+        </div>
+        <div class="card">
+          <img src="images/icons/projects.png" alt="">
+          <h3 class="card-stat">1458</h3>
+          <p class="card-title">Project Finished</p>
+        </div>
+        <div class="card">
+          <img src="images/icons/customers.png" alt="">
+          <h3 class="card-stat">590</h3>
+          <p class="card-title">Clients Worked</p>
+        </div>
+        <div class="card">
+          <img src="images/icons/email.png" alt="">
+          <h3 class="card-stat">22578</h3>
+          <p class="card-title">Email Send</p>
+        </div>
+      </div>
     </section>
   </main>
 
