--- a/index.html
+++ b/index.html
@@ -66,9 +66,54 @@
         <button class="btn-primary">Explore More</button>
       </div>
     </section>
+
     <!--Features Section -->
     <section class="feature">
+      <div class="feature-content">
+        <h3 class="head">
+          Features you will <br> love & enjoy
+        </h3>
+        <p class="text-lightgrey">
+          There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+          some form, by injected humour, or randomised words which don't look even
+        </p>
 
+        <div class="card">
+          <h4>Dexktop & Mobile Version</h4>
+          <p class="text-lightgrey">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised...........
+          </p>
+        </div>
+        <div class="card">
+          <h4>Dexktop & Mobile Version</h4>
+          <p class="text-lightgrey">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised...........
+          </p>
+        </div>
+        <div class="card">
+          <h4>Dexktop & Mobile Version</h4>
+          <p class="text-lightgrey">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised...........
+          </p>
+        </div>
+        <div class="card">
+          <h4>Dexktop & Mobile Version</h4>
+          <p class="text-lightgrey">
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
+            some form, by injected humour, or randomised...........
+          </p>
+        </div>
+      </div>
+      <div class="feature-image">
+        <img src="images/architect.png" alt="">
+        <div class="badge">
+          <h2>10+ Year</h2>
+          <p>Experience</p>
+        </div>
+      </div>
     </section>
     <!-- Facts Section -->
     <section class="facts">
@@ -96,6 +141,22 @@
           <h3 class="card-stat">22578</h3>
           <p class="card-title">Email Send</p>
         </div>
+      </div>
+    </section>
+    <!-- Sponsors Section -->
+    <section class="sponsors">
+      <h3 class="section-title">
+        Our Sponspors
+      </h3>
+      <p class="text-lightgrey">
+        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.
+      </p>
+      <div class="sponsors-img-container">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
       </div>
     </section>
   </main>
